--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="account">Account</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="client_id">853389619704-58v8odaobjd0i646r2oobvcm6a39kavm.apps.googleusercontent.com</string>
-    <string name="databasePath">https://tara-351111-default-rtdb.firebaseio.com/</string>
+    <string name="client_id">client id here</string>
+    <string name="databasePath">database url here</string>
     <string name="step2_title">Customize your sharing preference</string>
     <string name="step2_info">You\'re in control! Decide your daily earnings, availability and sharing preferences</string>
     <string name="step1_title">Details about your car</string>
